k8s/ingress.alb.example.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wyd-homestay
  namespace: wyd-homestay
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80},{"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-redirect: "443"
spec:
  ingressClassName: alb
  rules:
    - host: wyd.example.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wyd-homestay
                port:
                  number: 80
